Added quote styles

--- a/cozy.html
+++ b/cozy.html
@@ -15,15 +15,20 @@
             <div class="row">
                 <div class="col-xs-12" id="fullscreen-cover">
                     <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h1>Projects</h1>
+                    <h1>COZY 3</h1>
                     <p>
                         Quisque pulvinar dignissim tortor sit 
                         amet rutrum. Integer rutrum eros
                         ligula, in eleifend erat rutrum nec.
                     </p>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-lg-4">
+                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river." class="rounded-image">
+                </div>
                 <div class="col-xs-12 col-lg-8">
-                    <h1>Projects</h1>
+                    <h1>About COZY 3</h1>
                     <p>
                         Quisque pulvinar dignissim tortor sit 
                         amet rutrum. Integer rutrum eros
@@ -38,78 +43,66 @@
                         neque. In quis mauris quis ligula 
                         dictum sagittis eget sit amet neque.
                     </p>
-                    <p>
-                        Nunc urna elit, posuere eget nisi at,
-                        porttitor pharetra nunc. Nullam non
-                        massa sed augue sagittis sagittis eu 
-                        in arcu. Integer vulputate quam non
-                        hendrerit tincidunt.
-                    </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Category Name</h2>
+                    <h2>Skills used for this project</h2>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
+                <div class="col-lg-4">
+                    <h3>C#</h3>
                     <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
+                        
                     </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
+                <div class="col-lg-4">
+                    <h3>HLSL</h3>
                     <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
+                        Designed 3D shaders and lighting with HLSL and ShaderGraph.
                     </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
+                <div class="col-lg-4">
+                    <h3>GitHub</h3>
                     <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
+                        Designed 3D shaders and lighting with HLSL and ShaderGraph.                    
                     </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
+                </div>
+                <div class="col-lg-4">
+                    <h3>Adobe Illustrator</h3>
+                    <p>
+                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>Adobe Illustrator</h3>
+                    <p>
+                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>HTML</h3>
+                    <p>
+                        I am currently learning HTML for UI/UX in the Communication Technology program at UTA                    
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <h3>CSS</h3>
+                    <p>
+                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <a href="" class="btn">Learn more about me</a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <h2>Category Name</h2>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
-                    <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
-                    <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
-                    <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
-                </div>
+                <blockquote class="text-center">
+                    <p>Distant Lands is a great creator, all of the assets look beautiful as soon as the Unity package finishes importing into the project, but the love for the craft goes beyond just the point of sale. Distant Lands offers tremendous support in his Discord and has an awesome community.</p>
+                    <footer>IndieScape Games</footer>
+                </blockquote>
+            </div>
+            <div class="row">
+                <a href="https://assetstore.unity.com/packages/tools/utilities/cozy-stylized-weather-3-271742">View on the Unity Asset Store</a>
             </div>
         </div>
 
