Moved to three containers

--- a/index.html
+++ b/index.html
@@ -41,37 +41,43 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2>Articles</h2>
-                </div>
-                <div class="col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Interdum et malesuada fames ac ante ipsum primis in faucibus</h3>
-                    <p>Vivamus eget nisl ante. Nullam 
-                        sollicitudin auctor nisi tempor 
-                        convallis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Sed ut ultrices diam, nec congue dui.</h3>
-                    <p>
-                        Nam condimentum volutpat mollis. Etiam ut turpis et 
-                        massa condimentum facilisis tristique sed felis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
-                    <h3>Interdum et malesuada fames ac ante ipsum primis in faucibus</h3>
-                    <p>
-                        Nunc facilisis elit nunc, in feugiat velit sagittis quis.
-                    </p>
-                    <a href="" class="btn btn-secondary">Read More</a>
+        </div>
+        <div class="wide-background background-primary">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>Articles</h2>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
+                        <h3>Interdum et malesuada fames ac ante ipsum primis in faucibus</h3>
+                        <p>Vivamus eget nisl ante. Nullam 
+                            sollicitudin auctor nisi tempor 
+                            convallis.
+                        </p>
+                        <a href="" class="btn btn-secondary">Read More</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
+                        <h3>Sed ut ultrices diam, nec congue dui.</h3>
+                        <p>
+                            Nam condimentum volutpat mollis. Etiam ut turpis et 
+                            massa condimentum facilisis tristique sed felis.
+                        </p>
+                        <a href="" class="btn btn-secondary">Read More</a>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
+                        <h3>Interdum et malesuada fames ac ante ipsum primis in faucibus</h3>
+                        <p>
+                            Nunc facilisis elit nunc, in feugiat velit sagittis quis.
+                        </p>
+                        <a href="" class="btn btn-secondary">Read More</a>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-lg-5">
                     <h2>Why should you hire me?</h2>
