Added skills content

--- a/index.html
+++ b/index.html
@@ -97,52 +97,89 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
+                    <h3>Unity 3D</h3>
+                    <div class="star-rating five-star"></div>
+                    <p>
+                        I have 7 years of experience in the Unity engine with 5 years as a professional asset developer. 
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-4">
                     <h3>C#</h3>
+                    <div class="star-rating five-star"></div>
                     <p>
-                        
+                        C# is my most proficient language with 7 years of experience. I specialize in game logic and editor tools for Unity.
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <h3>HLSL</h3>
+                    <div class="star-rating five-star"></div>
                     <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.
+                        I am skilled in shader design using HLSL and shader graph editors. I tend to work on natural shaders, but I also create toon shaders.
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
+                    <h3>Unreal Engine</h3>
+                    <div class="star-rating two-star"></div>
+                    <p>
+                        Converted assets from Unity to Unreal and studied lighting in Unreal Engine 4 and Unreal Engine 5.
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-4">
                     <h3>GitHub</h3>
+                    <div class="star-rating three-star"></div>
                     <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.                    
+                        I use GitHub internally for version control and collaboration with other developers. I am new to Git and would love to improve in my process!                  
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <h3>Adobe Illustrator</h3>
+                    <div class="star-rating four-star"></div>
                     <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                        I use Adobe Illustrator for logo design and marketing for Distant Lands.                   
                     </p>
                 </div>
-                <div class="col-lg-4">
-                    <h3>Adobe Illustrator</h3>
+                <div class="col-md-6 col-lg-4">
+                    <h3>Adobe Premiere</h3>
+                    <div class="star-rating three-star"></div>
                     <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                        All video advertisements for Distant Lands are edited in Premiere Pro. I am self-taught in premiere and would love to learn more.            
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <h3>HTML</h3>
+                    <div class="star-rating four-star"></div>
                     <p>
-                        I am currently learning HTML for UI/UX in the Communication Technology program at UTA                    
+                        I am currently learning HTML for UI/UX in the Communication Technology program at UTA.                  
                     </p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <h3>CSS</h3>
+                    <div class="star-rating three-star"></div>
                     <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
+                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA.            
                     </p>
                 </div>
-                <div class="col-lg-4">
-                    <a href="" class="btn">Learn more about me</a>
+                <div class="col-md-6 col-lg-4">
+                    <h3>Blender</h3>
+                    <div class="star-rating four-star"></div>
+                    <p>
+                        I am a self-taught blender artist with 7 years of experience. I specialize in low poly and stylized art.
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <h3>Python</h3>
+                    <div class="star-rating one-star"></div>
+                    <p>
+                        Within Blender, I have some experience with using Python to program custom automations to expedite the modeling process.
+                    </p>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <a href="about.html" class="btn btn-primary">Learn more about me</a>
                 </div>
             </div>
         </div>
+
 
         <!-- <div id="windowSize"></div> -->
 
