Formatted About page based on Prettier syntax

--- a/about.html
+++ b/about.html
@@ -1,121 +1,207 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="keywords" content="Portfolio">
-        <meta name="description" content="Keller Bowman - 1001948719 | Personal Portfolio">
-        <meta name="author" content="Keller Bowman">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="keywords" content="Portfolio" />
+    <meta
+      name="description"
+      content="Keller Bowman - 1001948719 | Personal Portfolio"
+    />
+    <meta name="author" content="Keller Bowman" />
 
-        <title>Keller Bowman - 1001948719 | Personal Portfolio</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-lg-4">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river." class="rounded-image">
-                </div>
-                <div class="col-xs-12 col-lg-8">
-                    <h1>About Me</h1>
-                    <p>
-                        Quisque pulvinar dignissim tortor sit 
-                        amet rutrum. Integer rutrum eros
-                        ligula, in eleifend erat rutrum nec.
-                        Phasellus convallis erat eros,
-                        malesuada condimentum odio mollis 
-                        non. Aliquam ullamcorper turpis non 
-                        arcu feugiat pharetra sit amet nec
-                        neque. Curabitur massa nulla,
-                        ultrices ac euismod sit amet, posuere
-                        at quam. Nullam quis vestibulum 
-                        neque. In quis mauris quis ligula 
-                        dictum sagittis eget sit amet neque.
-                    </p>
-                    <p>
-                        Nunc urna elit, posuere eget nisi at,
-                        porttitor pharetra nunc. Nullam non
-                        massa sed augue sagittis sagittis eu 
-                        in arcu. Integer vulputate quam non
-                        hendrerit tincidunt.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2>Experience</h2>
-                </div>
-                <div class="col-xs-12">
-                    <h3>Distant Lands Productions</h3>
-                    <h4>Founder & CEO</h4>
-                    <p>Feb. 2019 - Present</p>
-                    <p>
-                        
-                    </p>
-                </div>
-                <div class="col-xs-12">
-                    <h3>Flying Squirrel Coffee Co.</h3>
-                    <h4>Barista</h4>
-                    <p>Apr. 2021 - Mar. 2022</p>
-                    <p>
-
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2>Relevant Skills & Courses Taken</h2>
-                </div>
-                <div class="col-lg-4">
-                    <h3>C#</h3>
-                    <p>
-                        
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>HLSL</h3>
-                    <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>GitHub</h3>
-                    <p>
-                        Designed 3D shaders and lighting with HLSL and ShaderGraph.                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Adobe Illustrator</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Adobe Illustrator</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>HTML</h3>
-                    <p>
-                        I am currently learning HTML for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>CSS</h3>
-                    <p>
-                        I am currently learning CSS for UI/UX in the Communication Technology program at UTA                    
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <a href="" class="btn">Learn more about me</a>
-                </div>
-            </div>
+    <title>Keller Bowman - 1001948719 | Personal Portfolio</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-lg-4">
+          <img
+            src="images/pexels-yiming-tang-20324868.jpg"
+            alt="White house with red roof by a lake or river."
+            class="rounded-image"
+          />
         </div>
+        <div class="col-xs-12 col-lg-8">
+          <h1>About Me</h1>
+          <p>
+            My name is Keller and I am the founder of Distant Lands. My journey
+            into entrepreneurship began in 2018, fueled by a lifelong love for
+            video game development. I've been immersed in creating games since I
+            was a kid, and that passion led me to specialize in Unity
+            development.
+          </p>
+          <p>
+            Distant Lands isn't just about crafting captivating games; it's also
+            about sharing my expertise and supporting budding developers. I've
+            always had a fervor for helping newcomers in the field. My goal is
+            to provide the necessary tools and resources to kickstart their
+            projects.
+          </p>
+          <p>
+            For me, Distant Lands is more than a business; it's a commitment to
+            nurturing a community of aspiring developers. I aim to foster a
+            space where innovation thrives, and individuals are empowered to
+            create and collaborate. My vision is to inspire others and create a
+            platform where creativity flourishes alongside a shared enthusiasm
+            for game development.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="background-secondary">
+      <div class="container line-below">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>Experience</h2>
+            <h3>Distant Lands Productions</h3>
+            <h4>Founder & CEO</h4>
+            <p>Feb. 2019 - Present</p>
+            <div class="highlight-border">
+              <p>
+                Under the title of Distant Lands, I create extensions, art,
+                utilities, and shaders for game developers to use in their
+                projects. In essence I build the Lego bricks that game
+                developers use to create their games.
+              </p>
+              <p>
+                I function as a solo contracted developer and have had my hand
+                in countless games over the 5 years I have operated the company.
+              </p>
+              <ul>
+                <li>Used C# to develop and maintain over 50 Unity assets.</li>
+                <li>
+                  Used Blender and HLSL to create artistic content for the Unity
+                  Engine.
+                </li>
+                <li>Managed active support channels via email and Discord.</li>
+                <li>
+                  Designed and published advertisements for Distant Lands
+                  assets.
+                </li>
+              </ul>
+            </div>
+            <h3>Flying Squirrel Coffee Co.</h3>
+            <h4>Barista</h4>
+            <p>Apr. 2021 - Mar. 2022</p>
+            <div class="highlight-border">
+              <ul>
+                <li>Provided customer service to coffee consumers.</li>
+                <li>Managed the Square system for the business.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>Relevant Skills & Courses Taken</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <h3>Unity 3D</h3>
+            <div class="star-rating five-star"></div>
+            <p>
+              I have 7 years of experience in the Unity engine with 5 years as a
+              professional asset developer.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>C#</h3>
+            <div class="star-rating five-star"></div>
+            <p>
+              C# is my most proficient language with 7 years of experience. I
+              specialize in game logic and editor tools for Unity.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>HLSL</h3>
+            <div class="star-rating five-star"></div>
+            <p>
+              I am skilled in shader design using HLSL and shader graph editors.
+              I tend to work on natural shaders, but I also create toon shaders.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>Unreal Engine</h3>
+            <div class="star-rating two-star"></div>
+            <p>
+              Converted assets from Unity to Unreal and studied lighting in
+              Unreal Engine 4 and Unreal Engine 5.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>GitHub</h3>
+            <div class="star-rating three-star"></div>
+            <p>
+              I use GitHub internally for version control and collaboration with
+              other developers. I am new to Git and would love to improve in my
+              process!
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>Adobe Illustrator</h3>
+            <div class="star-rating four-star"></div>
+            <p>
+              I use Adobe Illustrator for logo design and marketing for Distant
+              Lands.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>Adobe Premiere</h3>
+            <div class="star-rating three-star"></div>
+            <p>
+              All video advertisements for Distant Lands are edited in Premiere
+              Pro. I am self-taught in premiere and would love to learn more.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>HTML</h3>
+            <div class="star-rating four-star"></div>
+            <p>
+              I am currently learning HTML for UI/UX in the Communication
+              Technology program at UTA.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>CSS</h3>
+            <div class="star-rating three-star"></div>
+            <p>
+              I am currently learning CSS for UI/UX in the Communication
+              Technology program at UTA.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>Blender</h3>
+            <div class="star-rating four-star"></div>
+            <p>
+              I am a self-taught blender artist with 7 years of experience. I
+              specialize in low poly and stylized art.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <h3>Python</h3>
+            <div class="star-rating one-star"></div>
+            <p>
+              Within Blender, I have some experience with using Python to
+              program custom automations to expedite the modeling process.
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a href="about.html" class="btn btn-primary">Learn more about me</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        <!-- <div id="windowSize"></div> -->
+    <!-- <div id="windowSize"></div> -->
 
-        <script src="js/app.js"></script>
-    </body>
+    <script src="js/app.js"></script>
+  </body>
 </html>
