Updated HTML formatting to be consistent across all pages

--- a/cozy.html
+++ b/cozy.html
@@ -14,12 +14,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12" id="fullscreen-cover">
-                    <img src="images/pexels-yiming-tang-20324868.jpg" alt="White house with red roof by a lake or river.">
+                    <img src="images/cozy-firewatch-tower.jpg" alt="Cozy firewatch tower at night.">
                     <h1>COZY 3</h1>
-                    <p>
-                        Quisque pulvinar dignissim tortor sit 
-                        amet rutrum. Integer rutrum eros
-                        ligula, in eleifend erat rutrum nec.
+                    <p class="text-center">
+                        Step away from boring realism and embrace a beautifully hand-crafted stylized weather system.
                     </p>
                 </div>
             </div>
@@ -30,19 +28,12 @@
                 <div class="col-xs-12 col-lg-8">
                     <h1>About COZY 3</h1>
                     <p>
-                        Quisque pulvinar dignissim tortor sit 
-                        amet rutrum. Integer rutrum eros
-                        ligula, in eleifend erat rutrum nec.
-                        Phasellus convallis erat eros,
-                        malesuada condimentum odio mollis 
-                        non. Aliquam ullamcorper turpis non 
-                        arcu feugiat pharetra sit amet nec
-                        neque. Curabitur massa nulla,
-                        ultrices ac euismod sit amet, posuere
-                        at quam. Nullam quis vestibulum 
-                        neque. In quis mauris quis ligula 
-                        dictum sagittis eget sit amet neque.
+                        Create stunning weather patterns for your game worlds! From time-of-day to annual seasons, from puffy clouds to raging storms, from sunny days to dense fog, COZY does it all with ease! Focus on your scene's colors and easily tweak all variables for ultimate customization!
                     </p>
+                    <h3>New in version 3</h3>
+                    <ul>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
             <div class="row">
@@ -101,8 +92,8 @@
                     <footer>IndieScape Games</footer>
                 </blockquote>
             </div>
-            <div class="row">
-                <a href="https://assetstore.unity.com/packages/tools/utilities/cozy-stylized-weather-3-271742">View on the Unity Asset Store</a>
+            <div class="row center-content">
+                <a href="https://assetstore.unity.com/packages/tools/utilities/cozy-stylized-weather-3-271742" class="btn btn-primary">View on the Unity Asset Store</a>
             </div>
         </div>
 
