--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     />
     <meta name="author" content="Keller Bowman" />
 
-    <script src="https://kit.fontawesome.com/8ccb51e163.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/8ccb51e163.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Keller Bowman - 1001948719 | Personal Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -206,9 +209,7 @@
         <div class="row">
           <div class="col-md-9 col-lg-4">
             <h3>Keller Bowman</h3>
-            <p>
-              Thank you for viewing my portfolio.
-            </p>
+            <p>Thank you for viewing my portfolio.</p>
           </div>
           <div class="col-md-3 col-lg-2">
             <h4>Menu</h4>
@@ -251,7 +252,8 @@
           <div class="row">
             <div class="col-md-8">
               <p>
-                &copy; 2024 Mockup. All Rights Reserved. Keller Bowman | 1001948719
+                &copy; 2024 Mockup. All Rights Reserved. Keller Bowman |
+                1001948719
               </p>
             </div>
             <div class="col-md-4">
@@ -262,25 +264,33 @@
                   ></a>
                 </li>
                 <li>
-                  <a href="https://github.com/DistantLandsProductions" target="_blank"
+                  <a
+                    href="https://github.com/DistantLandsProductions"
+                    target="_blank"
                     ><i class="fa-brands fa-github"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/grayson-bowman/" target="_blank"
+                  <a
+                    href="https://www.linkedin.com/in/grayson-bowman/"
+                    target="_blank"
                     ><i class="fa-brands fa-linkedin-in"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/channel/UCXQh-98ACis92hNY0Qookvw" target="_blank"
+                  <a
+                    href="https://www.youtube.com/channel/UCXQh-98ACis92hNY0Qookvw"
+                    target="_blank"
                     ><i class="fa-brands fa-youtube"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="https://assetstore.unity.com/publishers/40676" target="_blank"
+                  <a
+                    href="https://assetstore.unity.com/publishers/40676"
+                    target="_blank"
                     ><i class="fa-brands fa-unity"></i
                   ></a>
-                </li>    
+                </li>
               </ul>
             </div>
           </div>
